force-app/main/default/objects/Lead/fields/Certification__c.field-meta.xml
<CustomField>
    <fullName>Certification__c</fullName>
    <label>Certification</label>
    <length>120</length>
    <type>Text</type>
</CustomField>