force-app/main/default/objects/Lead/fields/Data_Provider__c.field-meta.xml
<CustomField>
    <fullName>Data_Provider__c</fullName>
    <label>Data Provider</label>
    <length>40</length>
    <type>Text</type>
</CustomField>