force-app/main/default/objects/Lead/fields/Education__c.field-meta.xml
<CustomField>
    <fullName>Education__c</fullName>
    <label>Education</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>大专</fullName>
            </value>
            <value>
                <fullName>本科</fullName>
            </value>
            <value>
                <fullName>硕士</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>