force-app/main/default/objects/Lead/fields/Sync_Result__c.field-meta.xml
<CustomField>
    <fullName>Sync_Result__c</fullName>
    <label>Sync Result</label>
    <type>TextArea</type>
</CustomField>